[Src] Fix .dropdown positioning and add .overflow-{prop} to _helpers

--- a/src/_exprecss.sass
+++ b/src/_exprecss.sass
@@ -1,4 +1,4 @@
-$version: 'v0.4.0'
+$version: 'v0.4.1'
 $year: '2015'
 $license: 'MIT'
 
