--- a/src/partials/_helpers.sass
+++ b/src/partials/_helpers.sass
@@ -148,6 +148,31 @@
     &-flex
         @include display(flex)
 
+.overflow
+    &-visible
+        overflow: visible
+
+    &-hidden
+        overflow: hidden
+
+    &-scroll
+        overflow: scroll
+
+        &-y
+            overflow-y: scroll
+
+        &-x
+            overflow-x: scroll
+
+    &-auto
+        overflow: auto
+
+    &-initial
+        overflow: initial
+
+    &-inherit
+        overflow: inherit
+
 .inline-block-reset
     font-size: 0
 
