--- a/src/partials/_modals.sass
+++ b/src/partials/_modals.sass
@@ -75,7 +75,6 @@
     &-body
         overflow: auto
         padding: $px-gutter-base
-        overflow: auto
         background: $white
 
     p
